--- a/mindset.html
+++ b/mindset.html
@@ -1,37 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Mindset page of Anointed Fitness">
   <title>Mindset - Anointed Fitness</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+  <a href="index.html"><img src="images/logo.png" alt="Anointed Fitness Logo" class="site-logo"></a>
+
     <h1>Mindset</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="workouts.html">Workouts</a></li>
+        <li><a href="nutrition.html">Nutrition</a></li>
+        <li><a href="mindset.html">Mindset</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="workouts.html">Workouts</a></li>
-    <li><a href="nutrition.html">Nutrition</a></li>
-    <li><a href="mindset.html">Mindset</a></li>
-    <li><a href="tools.html">Tools</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
-  <main><main>
-    <h2>Mindset</h2>
-    <img src="images/mindset.jpg" alt="Waterfall nature scene" style="width:100%;max-width:800px;">
-    <p>Boost your wellness with strategies and quotes to keep you focused and motivated.</p>
-  </main></main>
-  
-<footer>
-  <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
-</footer>
+  <main>
+    <section>
+      <h2>Fitness Starts In Your Head</h2>
+      <p>Your mental game decides whether you show up or give up. Training your mind to stay consistent is just as important as training your body. Here's how to keep your fire lit.</p>
+    </section>
 
+    <img src="images/mindset.jpg" alt="Mindfulness" style="width:100%;max-width:800px;margin:1rem 0;">
+
+    <section>
+      <h2>Top 3 Mental Habits</h2>
+      <p>✔️ Focus on progress, not perfection. <br>
+         ✔️ Set micro-goals you can win weekly. <br>
+         ✔️ Build discipline by honoring small promises to yourself.</p>
+    </section>
+
+    <img src="images/mindset2.jpg" alt="Focus scene" style="width:100%;max-width:800px;margin:1rem 0;">
+
+    <section>
+      <h2>When You Want to Quit...</h2>
+      <p>We all hit a wall. When you do, remember your “why.” Who are you doing this for? What version of you are you building? Even 10 push-ups is better than quitting. Keep showing up, and your momentum will catch up.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
+  </footer>
 </body>
 </html>
