--- a/nutrition.html
+++ b/nutrition.html
@@ -1,37 +1,67 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Nutrition page of Anointed Fitness">
   <title>Nutrition - Anointed Fitness</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+  <a href="index.html"><img src="images/logo.png" alt="Anointed Fitness Logo" class="site-logo"></a>
+
     <h1>Nutrition</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="workouts.html">Workouts</a></li>
+        <li><a href="nutrition.html">Nutrition</a></li>
+        <li><a href="mindset.html">Mindset</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="workouts.html">Workouts</a></li>
-    <li><a href="nutrition.html">Nutrition</a></li>
-    <li><a href="mindset.html">Mindset</a></li>
-    <li><a href="tools.html">Tools</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
-  <main><main>
-    <h2>Nutrition</h2>
-    <img src="images/nutrition.jpg" alt="Group eating healthy food" style="width:100%;max-width:800px;">
-    <p>Discover budget-friendly recipes and meal prep tips to fuel your journey.</p>
-  </main></main>
-  
-<footer>
-  <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
-</footer>
+  <main>
+    <section>
+      <h2>Fuel Your Progress</h2>
+      <p>You can’t out-train a poor diet. Good food = good fuel. Whether you're trying to lose fat or gain lean muscle, your results start with what's on your plate. Here's how to simplify your nutrition.</p>
+    </section>
 
+    <img src="images/nutrition.jpg" alt="Healthy eating" style="width:100%;max-width:800px;margin:1rem 0;">
+
+    <section>
+      <h2>How to Track Calories</h2>
+      <p>Step 1: Use a free app like MyFitnessPal or Chronometer. <br>
+         Step 2: Know your Total Daily Energy Expenditure (TDEE). <br>
+         Step 3: Use a food scale or nutrition label for accuracy. <br>
+         Step 4: Be consistent — it’s better to be 80% accurate than 0%.</p>
+    </section>
+
+    <img src="images/nutrition2.jpg" alt="Meal plan" style="width:100%;max-width:800px;margin:1rem 0;">
+
+    <section>
+      <h2>Sample Meal Plan</h2>
+      <table>
+        <tr><th>Meal</th><th>Main Item</th><th>Protein (g)</th><th>Cost ($)</th></tr>
+        <tr><td>Breakfast</td><td>Oats + Eggs</td><td>25</td><td>2.00</td></tr>
+        <tr><td>Lunch</td><td>Chicken + Rice + Veggies</td><td>40</td><td>3.50</td></tr>
+        <tr><td>Dinner</td><td>Ground Turkey + Potatoes</td><td>35</td><td>4.00</td></tr>
+        <tr><td>Snack</td><td>Greek Yogurt</td><td>15</td><td>1.25</td></tr>
+      </table>
+    </section>
+
+    <section>
+      <h2>Quick Reminders</h2>
+      <p>✔️ Focus on whole foods first. <br>
+         ✔️ Drink 2–3L of water daily. <br>
+         ✔️ Don’t fear carbs or fats — balance matters.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
+  </footer>
 </body>
 </html>
