--- a/workouts.html
+++ b/workouts.html
@@ -1,37 +1,61 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Workouts page of Anointed Fitness">
   <title>Workouts - Anointed Fitness</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+  <a href="index.html"><img src="images/logo.png" alt="Anointed Fitness Logo" class="site-logo"></a>
+
     <h1>Workouts</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="workouts.html">Workouts</a></li>
+        <li><a href="nutrition.html">Nutrition</a></li>
+        <li><a href="mindset.html">Mindset</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="workouts.html">Workouts</a></li>
-    <li><a href="nutrition.html">Nutrition</a></li>
-    <li><a href="mindset.html">Mindset</a></li>
-    <li><a href="tools.html">Tools</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
-  <main><main>
-    <h2>Workouts</h2>
-    <img src="images/workout.jpg" alt="Workout with weights" style="width:100%;max-width:800px;">
-    <p>Check out our weekly bodyweight workout plans and follow-along videos coming soon.</p>
-  </main></main>
-  
-<footer>
-  <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
-</footer>
+  <main>
+    <section>
+      <h2>Start Moving</h2>
+      <p>Whether you're starting from zero or picking it back up, movement is medicine. Below you'll find a sample week of beginner workouts you can do from home — no gym, no excuses.</p>
+    </section>
 
+    <img src="images/workout.jpg" alt="Workout" style="width:100%;max-width:800px;margin-bottom:1rem;">
+
+    <section>
+      <h2>Weekly Workout Plan</h2>
+      <table>
+        <tr><th>Day</th><th>Focus</th><th>Workout</th></tr>
+        <tr><td>Monday</td><td>Full Body</td><td>Bodyweight circuit (push-ups, squats, planks)</td></tr>
+        <tr><td>Tuesday</td><td>Cardio</td><td>Jog/walk 20 mins or 100 jumping jacks</td></tr>
+        <tr><td>Wednesday</td><td>Core</td><td>Crunches, leg raises, Russian twists</td></tr>
+        <tr><td>Thursday</td><td>Strength</td><td>Dumbbell rows, push-ups, lunges</td></tr>
+        <tr><td>Friday</td><td>Stretch + Rest</td><td>Full body stretching or yoga</td></tr>
+      </table>
+    </section>
+
+    <img src="images/workout2.jpg" alt="Weights" style="width:100%;max-width:800px;margin:1rem 0;">
+
+    <section>
+      <h2>Tips for Success</h2>
+      <p>✔️ Start slow and listen to your body. <br>
+         ✔️ Progress = consistency, not perfection. <br>
+         ✔️ Warm up and cool down always. <br>
+         ✔️ Hydrate like your muscles depend on it (they do).</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Anointed Fitness | Built for PROG1836</p>
+  </footer>
 </body>
 </html>
